♻️ Webtorrent: Refactor styling to be self contained; fixes CSS bleed; closes brave/brave-browser#5650

--- a/components/brave_webtorrent/extension/styles/styles.css
+++ b/components/brave_webtorrent/extension/styles/styles.css
@@ -1,8 +1,6 @@
-#root {
-  min-height: 100%;
-  padding: 100px;
-  font-family: Muli, sans-serif;
-}
+/* This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this file,
+ * You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 a {
   text-decoration: none;
